# docs/swagger.yaml
@@ -5,13 +5,34 @@ definitions:
         description: 邮箱
         example: 123@ee.com
         type: string
+      id:
+        description: 用户 ID
+        type: integer
       password:
         description: 密码
         example: 123@password
         type: string
+      user_type:
+        description: 用户类型；0 为教练，1为学员
+        type: integer
       username:
         description: 用户名
         example: mick
+        type: string
+    type: object
+  account.UserItem:
+    properties:
+      email:
+        description: 邮箱
+        type: string
+      id:
+        description: 用户 ID
+        type: integer
+      user_type:
+        description: 用户类型；0 为教练，1为学员
+        type: integer
+      username:
+        description: 用户名
         type: string
     type: object
   coach.AthleteTraining:
@@ -52,6 +73,17 @@ definitions:
         description: 总桨数
         type: integer
     type: object
+  controller.UserListResp:
+    properties:
+      items:
+        description: 对象列表
+        items:
+          $ref: '#/definitions/account.UserItem'
+        type: array
+      paginate:
+        $ref: '#/definitions/page.Paginate'
+        description: Page
+    type: object
   errs.BasicError:
     properties:
       code:
@@ -59,18 +91,27 @@ definitions:
       msg:
         type: string
     type: object
+  page.Paginate:
+    properties:
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
-  /api/mc/v1/account/:username:
+  /api/mc/v1/accounts/:user_id:
     get:
       description: 传入 username，根据用户名查询用户
       parameters:
-      - description: nick
+      - description: 用户ID
         in: path
-        name: username
+        name: user_id
         required: true
-        type: string
+        type: integer
       responses:
         "200":
           description: OK
@@ -81,6 +122,119 @@ paths:
           schema:
             $ref: '#/definitions/errs.BasicError'
       summary: 获取用户信息
+  /api/v1/account/users:
+    get:
+      description: 传入 page 参数，查询用户列表
+      parameters:
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: page_size
+        type: integer
+      - in: query
+        name: total
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.UserListResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.BasicError'
+      summary: 获取用户列表
+    post:
+      description: 添加用户
+      parameters:
+      - description: 用户信息
+        in: body
+        name: account.User
+        required: true
+        schema:
+          $ref: '#/definitions/account.User'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/account.User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.BasicError'
+      summary: 添加用户
+  /api/v1/account/users/:user_id:
+    delete:
+      description: 删除用户
+      parameters:
+      - description: 用户ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: 用户信息
+        in: body
+        name: account.User
+        required: true
+        schema:
+          $ref: '#/definitions/account.User'
+      responses:
+        "200":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.BasicError'
+      summary: 删除用户
+    patch:
+      description: 更新用户密码
+      parameters:
+      - description: 用户ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: 用户信息
+        in: body
+        name: account.User
+        required: true
+        schema:
+          $ref: '#/definitions/account.User'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/account.User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.BasicError'
+      summary: 更新用户密码
+    put:
+      description: 更新用户信息
+      parameters:
+      - description: 用户ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: 用户信息
+        in: body
+        name: account.User
+        required: true
+        schema:
+          $ref: '#/definitions/account.User'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/account.User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errs.BasicError'
+      summary: 更新用户信息
   /api/v1/coach/training:
     get:
       description: 实时训练数据
