# internal/account/model/user.go
@@ -3,12 +3,13 @@ package model
 import "sports/pkg/db/data"
 
 type User struct {
-	ID       string `json:"id" gorm:"size:32;not null;primary_key;unique_index"`
+	ID       int32  `json:"id" gorm:"size:32;not null;primary_key;unique_index"`
+	UserType int32 `json:"user_type" gorm:"size:32;not null"`
 	UserName string `json:"user_name" gorm:"not null;"`
 	Password string `json:"password"`
 	Phone    string `json:"phone"`
 	Email    string `json:"email"`
-	data.BaseTimestampWithDelete
+	data.BaseTimestamp
 }
 
 func (User) TableName() string {
@@ -16,5 +17,5 @@ func (User) TableName() string {
 }
 
 func (u *User) IsExist() bool {
-	return u.ID != ""
+	return u.ID > 0
 }
